@@ -15,6 +15,7 @@ from pghoard.postgres_command import archive_command, restore_command
 from pghoard.restore import HTTPRestore, Restore
 from pghoard.rohmu.encryptor import Encryptor
 from queue import Queue
+import json
 import logging
 import os
 import psycopg2
@@ -30,6 +31,27 @@ def http_restore(pghoard):
 
 
 class TestWebServer:
+    def test_requesting_status(self, pghoard):
+        conn = HTTPConnection(host="127.0.0.1", port=pghoard.config["http_port"])
+        response = conn.request("GET", "/status")
+        response = conn.getresponse()
+        response_parsed = json.loads(response.read().decode('utf-8'))
+        assert response.status == 200
+        # "startup_time": "2016-06-23T14:53:25.840787",
+        assert response_parsed['startup_time'] is not None
+
+        response = conn.request("GET", "/status/somesite")
+        response = conn.getresponse()
+        assert response.status == 400
+
+        response = conn.request("GET", "/somesite/status")
+        response = conn.getresponse()
+        assert response.status == 404
+
+        response = conn.request("GET", "/{}/status".format(pghoard.test_site))
+        response = conn.getresponse()
+        assert response.status == 501
+
     def test_list_empty_basebackups(self, pghoard, http_restore, capsys):  # pylint: disable=redefined-outer-name
         # List with direct HttpRestore access
         assert http_restore.list_basebackups() == []
